--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
         "utility": "cpp",
         "typeinfo": "cpp",
         "random": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "*.txt": "cpp"
     },
     "idf.portWin": "COM9"
 }
